templates/tpl_modified/stylesheet.css
/* ... */
#janolaw-paragraph {
  font-size: 14px;
  font-weight: bold;
  text-align: center;
  margin: 16px 4px 4px 8px;
}
.janolaw-text {
  font-size: 12px;
  margin: 8px 4px 4px 8px;
}
.janolaw-adress {
  font-size: 12px;
  margin: 8px 4px 4px 8px;
}
.janolaw-block {
  font-size: 12px;
  margin: 8px 4px 4px 8px;
}
#janolaw-footer{
}
#janolaw-body{
}
/* END Janolaw.de */


/* 42. START sitemap  */
.sitemap {
  -moz-column-count: 3;
  -moz-column-gap: 60px;
  -moz-column-rule: 1px solid #eee;
  -webkit-column-count: 3;
  -webkit-column-gap: 60px;
  -webkit-column-rule: 1px solid #eee;
  column-count: 3;
  column-gap: 60px;
  column-rule: 1px solid #eee;
}

.sitemap > ul.nocolumnbreak {
  break-inside: avoid-column;
  -webkit-column-break-inside:avoid;
  -moz-column-break-inside:avoid;
  -o-column-break-inside:avoid;
  -ms-column-break-inside:avoid;
  column-break-inside:avoid;
  margin-left:0px;
  margin-bottom:30px;
  list-style-type:none;
}
.nocolumnbreak {
  margin-bottom: 30px !important;
}
.sitemap > ul > li {
  float:left;
  width:100%;
}
.sitemap ul {
  list-style-type:none;
  margin-left:0px;
}

.sitemap ul > li.sitemap_header {  
  border-top: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  font-size:13px;
  font-weight:bold;
  line-height:31px; 
}
.sitemap ul > li.sitemap_header a {
  background:#f9f9f9;
  display:block;
  padding: 0px 5px;
}
.sitemap ul > li.sitemap_header a:hover {
  color:#333 !important;
  text-decoration:none !important;
  background: #f1f1f1 !important;
}

.sitemap ul li li {  
  border-top: 1px solid #ddd;
  font-size:13px;
  font-weight:normal;
  line-height:31px; 
}
.sitemap ul li li > a {
  background:#fff !important;
  color:#333;
  display:block;
}
.sitemap a:hover {
  color:#6d2551 !important;
  text-decoration:none !important;
  background: #fafafa !important;
}
/* END sitemap  */


/* 43. START product_reviews_info */
.pri_imagebox {
  float:left;
  width:262px;
}
.pri_big_image {
  position:relative;
  width:240px;
  min-height:240px;
  margin: 0px 0px 0px 0px;
  border:1px solid #eee;
}
.pri_big_image img {
  position:absolute;
  margin: auto;
  left:0px;
  right:0px;
  bottom:0px;
  top:0px;
  max-width:240px;
  height:auto;
}  
.pri_zoomtext {
  line-height:15px;
  font-size:9px;
  white-space:nowrap;
  padding:8px 0px;
}
.pri_content {
  float:right;
  width:483px;
}
.pri_rating_text {
  float:left;
  display:inline-block;
  padding-right:5px;
}
.pri_rating_stars {
  float:left;
  display:inline-block;
}
.pri_rating_stars img {
  float:left;
}
/* END product_reviews_info */



/* 44. START miscellaneous */

/* START No Javascript Styles for Tabs */  
/* Moved in general.css.php as inline-style */
/*
ul.resp-tabs-list{
  display:none;
}
*/
/* END No Javascript Styles for Tabs */


/* START Subcontent navigation in content */
.subcontent {
  float:right; 
  margin: 8px 0px 40px 40px;
  background: #f2f2f2;
  border: 1px solid #ccc;
  padding: 10px;
  width:240px;
}
.subcontent h4 a:hover {
  text-decoration:none;
}
.subcontent ul {
  margin: 0px 0px 0px 15px;
  list-style-type:square;
}
.subcontent ul li {

}
.subcontent ul li a {
  display:block; 
  padding: 4px 0px;
  border-bottom: 1px dotted #ccc;
}
.subcontent ul li a:hover {
  text-decoration:none;
}
/* END Subcontent navigation in content */



/* START Klarna */ 

/* product_info */
.pd_summarybox .klarna_PPBox {
  margin-top:5px !important;
  height:50px !important;
  width: 99% !important;
  font-size:13px !important;

}
.pd_summarybox .klarna_PPBox .klarna_PPBox_topMid span {
  margin-top:9px !important;
}

/* shopping cart */
.karna_container {
  margin: 5px 0px;
  float:right;
  width:300px;
} 
.karna_container .klarna_PPBox {
  margin-top:5px !important;
  margin-bottom:0px !important;
  height:50px !important;
  width: 99% !important;
  font-size:13px !important;
}
.karna_container .klarna_PPBox .klarna_PPBox_bottomMid {
  height:170px !important;
}
.karna_container .klarna_PPBox .klarna_PPBox_topMid span {
  margin-top:9px !important;
}
.karna_container .klarna_PPBox .klarna_PPBox_pull {
  margin-top: -2px !important;
}

/* checkout */
.klarna_box {
  min-width: 100% !important;
  max-width: 100% !important;
  border: none !important; 
  padding: 0px !important;
}
.klarna_box_bottom input {
  height:auto !important;
}
.klarna_box_bottom select {
  height: auto !important;
  padding:3px !important;
}
.klarna_einwilligung {
  max-width: 100% !important;
}
.klarna_language .klarna_display_in {
  display:none !important;
}
.klarna_language .klarna_flag_list {
  border-top:none !important;
}
.klarna_box_bottom {
  display:block !important;
}

.klarna_box_bottom ol.paymentPlan {
  margin: 3px 0 10px 0;
  padding: 5px;
}
/* END Klarna */ 


/* END miscellaneous */

